# snakemake-executor-plugin-flux

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  ci_true_api.yml  main.yaml  release-please.yml
docs/: further.md  intro.md
example/: Dockerfile
example/conda/: Snakefile  test-env.yaml
snakemake_executor_flux/: __init__.py  executor.py  version.py
snakemake_executor_plugin_flux/: __init__.py  executor.py  version.py
tests/: tests.py
